# PCE_Keyboard

./: LICENSE  README.md  Technical.md  TestROM.md
Hardware/: Readme.md
Hardware/Firmware/: CMakeLists.txt  hid_app.c  main.c
Hardware/Firmware/RELEASE/: pcekeybd.uf2
Software/Adafruit_MacroPad/: Tsushin.py
Software/TEST_ROM/: build.sh  lib_exclude.asm  testkb.c
Software/TEST_ROM/RELEASE/: testkb.pce
